@startuml
skinparam classAttributeIconSize 0

interface "Event Callback" as EventCallback {
  +operator()(const T&)
}

class EventSystem {
  +getInstance(): EventSystem&
  +registerCallback<T>(cb)
  +sendEvent<T>(event)
  +init()
  +shutdown()
}

class EventQueue {
  +addEvent(typeId, payload)
  +start()
  +stop()
}

class HandlersManager {
  +registerCallback(typeId, cb)
  +dispatchEvent(typeId, payload)
}

class TypeID {
  +value<T>(): TypeID_t
}

class TypeEraser {
  +createEvent<T>(event): BytePtr
}

class "events::Timestamp" as Timestamp
class "events::Speed" as Speed

EventSystem *-- EventQueue : owns
EventSystem *-- HandlersManager : owns
EventSystem ..> TypeID : maps template type
EventSystem ..> TypeEraser : erases payload
EventQueue --> HandlersManager : dispatches queued event
HandlersManager ..> EventCallback : invokes
TypeID ..> Timestamp : example
TypeID ..> Speed : example

note right of EventQueue
Asynchronous worker thread
consumes queued erased payloads.
end note
@enduml
